# openff-forcefields

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  ff_release.md
.github/workflows/: CI.yml  canary.yaml
canary/: README.md
canary/data/: coverage.smi  propynes.smi
canary/scripts/: test_hmr.py
devtools/: README.md
devtools/conda-envs/: canary_env.yaml  test_env.yaml  test_env_nagl_models.yaml  test_no_openforcefield.yaml  test_no_toolkit.yaml
devtools/scripts/: create_conda_env.py
devtools/travis-ci/: before_install.sh
docs/: water-models.md
openforcefields/: __init__.py  _version.py  openforcefields.py
openforcefields/data/: README.md  ionslm_126_fb3.csv  ionslm_126_fb4.csv  ionslm_126_opc.csv  ionslm_126_opc3.csv  jc.csv
openforcefields/offxml/: README.md  opc-1.0.0.offxml  opc-1.0.1.offxml  opc.offxml  opc3-1.0.0.offxml  opc3-1.0.1.offxml  opc3.offxml  openff-1.0.0-RC1.offxml  openff-1.0.0-RC2.offxml  openff-1.0.0.offxml  openff-1.0.1.offxml  openff-1.1.0.offxml  openff-1.1.1.offxml  openff-1.2.0.offxml  openff-1.2.1.offxml  openff-1.3.0.offxml  openff-1.3.1-alpha.1.offxml  openff-1.3.1.offxml  openff-2.0.0-rc.1.offxml  openff-2.0.0-rc.2.offxml  openff-2.0.0.offxml  openff-2.1.0-rc.1.offxml  openff-2.1.1.offxml  openff-2.2.0-rc1.offxml  openff-2.2.1-rc1.offxml  openff-2.2.1.offxml  openff-2.3.0-rc2.offxml  openff-2.3.0.offxml  openff-2.3.0rc1.offxml  openff_no-water-3.0.0-alpha0.offxml  openff_no-water_unconstrained-3.0.0-alpha0.offxml  openff_no_water-3.0.0-alpha0.offxml  openff_unconstrained-1.0.0-RC1.offxml  openff_unconstrained-1.0.0-RC2.offxml  openff_unconstrained-1.0.0.offxml  openff_unconstrained-1.0.1.offxml  openff_unconstrained-1.1.0.offxml  openff_unconstrained-1.1.1.offxml  openff_unconstrained-1.2.0.offxml  openff_unconstrained-1.2.1.offxml  (+32 more)
openforcefields/offxml/water/: tip3p-1.0.0.offxml  tip3p-fb-1.0.0.offxml  tip3p-fb_1.0.0.offxml  tip4p-ew-1.0.0.offxml  tip5p-1.0.0.offxml
openforcefields/tests/: compare.py  test_openforcefields.py  test_water_models.py
scripts/: add_xe_vdw.py  get_ion_nb_params_from_ambertools_frcmod.py  write_opc.py  write_opc3.py  write_spce.py  write_tip3p.py  write_tip3p_fb.py  write_tip4p_ew.py  write_tip4p_fb.py  write_tip5p.py
