[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm>=8",
]

[project]
name = "openforcefields"
description = "Force fields released by the Open Force Field Initiative"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "CC-BY-4.0" }
authors = [
  { name = "The Open Force Field Initiative", email = "info@openforcefield.org" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
urls.Homepage = "https://github.com/openforcefield/openforcefields"
entry-points."openforcefield.smirnoff_forcefield_directory".get_forcefield_dirs_paths = "openforcefields.openforcefields:get_forcefield_dirs_paths"

[tool.setuptools]
package-data.openforcefields = [ "offxml/*" ]
packages.find.where = [ "." ]
packages.find.include = [ "openforcefields", "openforcefields.*" ]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 119
lint.select = [ "E", "F", "I", "NPY", "RUF", "UP", "W" ]
lint.per-file-ignores."openforcefields/**/__init__.py" = [ "F401" ]
lint.per-file-ignores."scripts/add_xe_vdw.py" = [ "RUF003" ]
lint.isort.known-third-party = [ "openff.toolkit", "openff.utilities", "openff.units" ]

[tool.coverage]
run.omit = [
  "*/tests/*",
]
